Content Blocking shield and subpanels persist after switching tabs
Categories
(Firefox :: Site Identity, defect, P1)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox65 | --- | unaffected |
| firefox66 | --- | verified |
| firefox67 | --- | verified |
People
(Reporter: englehardt, Assigned: johannh)
References
(Blocks 1 open bug)
Details
(Keywords: regression, Whiteboard: [anti-tracking])
Attachments
(1 file)
|
47 bytes,
text/x-phabricator-request
|
lizzard
:
approval-mozilla-beta+
|
Details | Review |
STR:
- Go to https://senglehardt.com/test/trackingprotection/test_pages/index.html. Note the lack of shield.
- Click "Fingerprinting and Cryptomining and Trackers" in the same tab.
- Click the back button
- Right click "Fingerprinting and Cryptomining and Trackers" and open in a new tab.
- Switch back to the original tab
Expected:
Original tab does not show the shield
Actual:
Original tab show the shield state of second tab. The rows for cryptomining/fingerprinting are still present, but the subpanels are (correctly) empty.
Comment 1•6 years ago
|
||
Content blocking log at step 5:
await gBrowser.selectedBrowser.getContentBlockingLog()
"{
"https://senglehardt.com\": [[32768, true, 1]]
}
"
The UI seems to be highly confused here. Johann, any chance you can take a look please?
| Assignee | ||
Comment 2•6 years ago
|
||
Quite weird, I can reproduce and will take a look.
| Assignee | ||
Comment 3•6 years ago
|
||
| Assignee | ||
Comment 4•6 years ago
|
||
| Assignee | ||
Comment 5•6 years ago
|
||
Comment 7•6 years ago
|
||
This patch touches code which Barret may be working on now...
Comment 8•6 years ago
|
||
| bugherder | ||
Comment 9•6 years ago
|
||
| bugherder | ||
Updated•6 years ago
|
Updated•6 years ago
|
| Assignee | ||
Comment 10•6 years ago
|
||
Comment on attachment 9044910 [details]
Bug 1527151 - Reset securityUI.contentBlockingEvent on top level location changes. r=Ehsan
Beta/Release Uplift Approval Request
- Feature/Bug causing the regression: Bug 1520879
- User impact if declined: Benign pages may be displayed as containing trackers
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: Yes
- If yes, steps to reproduce: See comment 0
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): This is a relatively compact and straightforward fix that has a test and has been baking in Nightly for a week now
- String changes made/needed: None
Updated•6 years ago
|
Comment 11•6 years ago
|
||
Comment on attachment 9044910 [details]
Bug 1527151 - Reset securityUI.contentBlockingEvent on top level location changes. r=Ehsan
Fix for new regression in 66, has been on nightly a while, includes tests.
Let's uplift for beta 13.
Comment 12•6 years ago
|
||
| bugherder uplift | ||
Updated•6 years ago
|
Comment 13•6 years ago
|
||
I've managed to reproduce this bug on an affected Firefox 66.0b7 using Windows 10x64.
This issue is verified fixed on Firefox 66.0b13 and Firefox 67.0a1 (20190303215808) using Windos 10x64 and macOS 10.13 but in Step 4 from comment 0 the shield doesn't appear just after refreshing the page, is this intended?
| Assignee | ||
Comment 14•6 years ago
|
||
(In reply to Maria Berlinger [:maria_berlinger], Release Desktop QA from comment #13)
I've managed to reproduce this bug on an affected Firefox 66.0b7 using Windows 10x64.
This issue is verified fixed on Firefox 66.0b13 and Firefox 67.0a1 (20190303215808) using Windos 10x64 and macOS 10.13 but in Step 4 from comment 0 the shield doesn't appear just after refreshing the page, is this intended?
Yeah, that seems like a bug, can you please file it? Thanks!
Comment 15•6 years ago
|
||
Logged bug 1533362.
Closing this as verified fixed per comment 14
Description
•