Bug 1527151 - Reset securityUI.contentBlockingEvent on top level location changes. r=Ehsan a=lizzard

We had previously missed to call browser.updateSecurityUIForContentBlockingEvent on
onLocationChange updates, to reset the contentBlockingEvent state. This would mean that
on tab switch the contentBlockingEvent state for benign pages would still be what it was
set to on the last tracker page.

Differential Revision: https://phabricator.services.mozilla.com/D20328

--HG--
extra : source : d945b5bd54f03d378481a960ae8293f6ce375aeb